# predictive-maintenance

./: .gitignore  LICENSE  README.md  docker-compose.yml  mlFlowDockerfile  mlServerDockerfile  pyproject.toml  requirements.txt
notebooks/: 01_EDA.ipynb  02_feature_engineering.ipynb  03_classification_models.ipynb
src/: app.py
src/model/: MLflowModelServer.py  preprocessing.py  train.py
